--- a/style.css
+++ b/style.css
@@ -6,11 +6,12 @@
 .right_head {
     color: black;
     font-size: small;
+}
     
 /* NEED HELP WITH THIS */
-link_style:hover {
+/*link_style:hover {
     background-color: lightgray;
-}
+}*/
 
 .Header1 {
     color: teal;
