--- a/style.css
+++ b/style.css
@@ -8,10 +8,13 @@
     font-size: small;
 }
     
-/* NEED HELP WITH THIS */
-/*link_style:hover {
+/* NEED HELP WITH THIS 
+
+link_style:hover {
     background-color: lightgray;
-}*/
+}
+
+*/
 
 .Header1 {
     color: teal;
@@ -40,4 +43,37 @@
 
 #SecondaryHeader {
     display: inline;
+}
+
+/* 
+NEED HELP WITH THIS 
+@Media - copied from class example
+*/
+@media (max-width: 700px) {
+    #mainHeaderText {
+        display: block;
+    }
+    
+    #navbarU1{
+        display: block;
+    }
+
+    #mainBody{
+        width: 300px;
+    }
+}    
+
+@media (max-width: 400px) {
+    #mainHeaderText {
+        display: block;
+    }
+        
+    #navbarU1{
+        display: block;
+    }
+    
+    #mainBody{
+        width: 200px;
+    }
+    
 }
